--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,47 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.grid {
+  display: grid;
+  grid-template-columns: 150px auto 150px;
+  grid-gap: 1em;
+}
+
+header, footer {
+   grid-column: 1 / 4;
+}
+
+@media all and (max-width: 700px) {
+  aside,
+  article {
+    grid-column: 1 / 4;
+  }
+}
+
+article {
+  height: 100vh;
+}
+
+
+.hero {
+  height: 100vh;
+  position: relative;
+}
+
+.hero_img, .hero_overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0; 
+  left: 0;
+  z-index: -1;
+}
+
+.hero_overlay {
+  background: rgba(0,0,0,0.7);
+}
+
+.hero_content {
+  color: white;
+}
