--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 .grid {
   display: grid;
   grid-template-columns: 150px auto 150px;
@@ -30,28 +25,7 @@ header, footer {
 }
 
 article {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 
-.hero {
-  height: 100vh;
-  position: relative;
-}
-
-.hero_img, .hero_overlay {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0; 
-  left: 0;
-  z-index: -1;
-}
-
-.hero_overlay {
-  background: rgba(0,0,0,0.7);
-}
-
-.hero_content {
-  color: white;
-}
