--- a/src/app.scss
+++ b/src/app.scss
@@ -89,7 +89,8 @@ ul {
 .section {
   &-hero {
     display: flex;  
-    max-width: 100vw;
+    max-width: 100vw;    
+    overflow-x: hidden;
     
     &_full {
       min-height: 100vh;      
@@ -142,6 +143,7 @@ ul {
 
         &_description {
           order: 2;
+          padding-right: 45%;
         }
 
         &_options {
