--- a/src/app.scss
+++ b/src/app.scss
@@ -82,6 +82,15 @@ ul {
   &__body {
     position: relative;
   }
+
+  &__info {
+    position: absolute;
+    top:0;
+    right: 0;
+    bottom: 0;
+    left:0;
+    background: rgba(0,0,0,0.7);
+  }
 }
 
 .page {
