--- a/src/app.scss
+++ b/src/app.scss
@@ -6,6 +6,7 @@ body {
     margin: 0;
     font-family: 'Lato';
     font-size: 16px;
+    line-height: 1.5;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -86,10 +87,10 @@ ul {
 
   &__info {
     position: absolute;
-    top:70%;    
+    top:63%;    
     color: white;
     right: 0;
-    bottom: 3px;
+    bottom: 5px;
     left:0;
     padding: 1rem; 
     cursor: pointer;
