--- a/src/app.scss
+++ b/src/app.scss
@@ -297,22 +297,36 @@ ul {
 
 .activity {
   position: relative;
-  display: flex;
-  min-height: 100vh;
+  display: flex;  
+
+  &__toggle {
+    outline: none;
+    border: none;     
+    position: absolute; 
+    top: 0;
+    right: 0;
+    height: 2rem;
+    z-index: 10;
+    width: 2rem;
+    cursor: pointer;
+  }
 
   &__image {
     position: absolute;
     width: 100%;
     height: auto;
-
-
-    z-index: -1;
-    filter: opacity(0.7);
+    z-index: -1;    
   }
 
   &__details {
-    flex: 3;
-    padding: 1rem 2rem;
+    flex: 3;    
+    display: flex;
+    flex-direction: column;
+
+    &__title {
+      font-size: 3rem;
+      padding: 2rem;
+    }
   }
 
   &__list {
@@ -339,6 +353,38 @@ ul {
 
     &__item {
       width: 50%;
+    }
+  }
+}
+
+.image {
+  &-details {
+    flex: 1;
+    align-items: flex-end;
+    display: flex;
+
+    &__user {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 1rem 2rem;
+      color: #fff;
+      backdrop-filter: blur(6px);
+      width: 100%;
+
+      &__headshot {
+        border-radius: 50%;
+      }
+
+      &__name {
+        align-self: center;
+        padding-left: 1rem;
+        page-break-after: always;
+      }
+
+      &__social {
+        width: 100%;
+        padding: 0.5rem 1rem;
+      }
     }
   }
 }
