--- a/src/app.scss
+++ b/src/app.scss
@@ -1,544 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Karla:regular,bold,italic');
 @import url('https://fonts.googleapis.com/css?family=Lato:regular,bold,italic');
+@import "../css/all";
 
-@mixin fullScreen {
-  @media (min-width:768px) {
-    @content;
-  }
-}
 
-@mixin smallScreen {
-  @media (max-width:767px) {
-    @content;
-  }
-}
 
-@mixin activityBackdrop {
-    background: rgba(10,111,171,0.4);
-    backdrop-filter: blur(4px);
-    color: white;
-    padding: 1.5rem;
-}
 
-//.block__element--modifier { css stuff }
-body {
-    margin: 0;
-    font-family: 'Lato';
-    font-size: 16px;
-    line-height: 1.5;
-}
 
-a {
-  text-decoration: none;
-  color: inherit;
-}
 
-a:hover {
-  text-decoration: underline;  
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Karla';
-    margin:0;
-    opacity: 60;
-}
-
-h1 {
-    font-size: 5rem;
-    margin: 1rem 0;
-}
-
-h2 {
-    font-size: 2.25rem;
-    margin: 0 0 1rem;
-}
-
-.body_container {
-    display: grid;    
-    grid-template-rows: 10vw 100vh 10vw;
-    grid-gap: 1rem;    
-}
-
-header {
-    position:fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    padding: 2vw;
-    z-index: 5;
-}
-
-article {
-    min-height: 100vh;
-}
-
-ul {
-  list-style-type: none;  
-  padding: 0;
-  margin: 0;
-}
-
-.example {
-  background: none;
-  &-enter-done {
-    background: red;
-  }
-}
-
-.container {
-  &_trail {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    height: 100vw;
-    min-height: 100vh;
-  }
-}
-
-.trail {
-  display: flex;  
-  flex-direction: column;  
-  width: 33%;
-  margin: 10px;
-
-  &__subtitle {
-    opacity: 0.7;
-  }
-
-  &__image {
-    max-width: 100%;
-    // clip-path: polygon(0 0, 100% 0, 100% 0, 100% 100%, 100% 100%, 20% 100%, 0 80%, 0 0);
-    border-radius: 2rem;
-  }
-
-  &__body {
-    position: relative;
-    overflow: hidden;
-  }
-
-  &__info {
-    position: absolute;
-    top:63%;    
-    color: white;
-    right: 0;
-    bottom: 5px;
-    left:0;
-    padding: 1rem; 
-    cursor: pointer;
-    background: rgba(0,0,0,0.7);
-    transition: 0.2s ease-in-out top, cubic-bezier(0.075, 0.82, 0.165, 1) border-radius;
-    border-radius: 0 0 2rem 2rem;
-
-
-    .trail__details {
-      margin-top: 100%;
-      transition: 0.25s ease-in margin, 0.1s ease-out margin;
-      display: flex;      
-
-      &_spec {
-        flex: 1;
-      }
-    }
-
-
-    &--open {
-      top: 0;
-      border-radius: 2rem;
-
-      .trail__details {
-        margin-top: 5%;       
-      }
-    }   
-  }
-
-  &__toggle {      
-
-    &__icon {
-      position: absolute;
-      top: 1.25rem;
-      right: 1.25rem;
-    }
-  }
-}
-
-.page {
-  min-height: 100vh;
-  max-width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  &-content {
-    flex: 0 1 auto;
-    min-width: 60vw;
-    padding:6rem 3rem;
-    background: rgba(255,255,255, 0.6);
-    backdrop-filter: blur(2px);
-    // filter: blur(0.75);
-  }
-
-}
-
-.flex {
-  display: flex;
-}
-
-.searchBar {
-    label {
-        display: block;
-    }
-    &_box {
-        background: none;
-        outline: 1px solid white;
-        padding: 1em;
-        width:75%;
-        color:white;
-    }
-
-    &_btn {
-        padding: 1em;
-        cursor: pointer;
-    }
-}
-
-.section {
-  &-hero {
-    display: flex;  
-    max-width: 100vw;    
-    overflow-x: hidden;
-    
-    &_full {
-      min-height: 100vh;         
-    }
-
-    &_center {
-      justify-content: center;
-      align-items: center;
-    }
-
-    &_content {
-      display: flex;
-      flex-direction: column;
-    }
-
-    &-title {
-      font-size: 2rem;
-    }
-  }
-
-  &_fill {
-    &-white {
-      background: white;
-    }
-  }
-}
-
-.background-image {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0; 
-    left: 0;
-    z-index: -1;
-}
-
-/* ALL HERO CSS */
-.hero {
-    min-height: 100vh;
-    position: relative; 
-    
-    &-content {
-        display: flex;
-        flex-direction: column;
-        padding: 4rem 1rem;
-        color: #f8f8f8;
-
-        &_title {
-          order: 1;
-          opacity: 0;
-          margin-top: 100%;
-          transition: 0.2s ease-in margin, 0.35s ease-in opacity;
-
-          &-enter-done {
-            margin-top: 0;
-            opacity: 1;
-          }
-        }
-
-        &_subtitle {
-          order: 0;
-          text-transform: uppercase;
-          opacity: 0.5;          
-        }
-
-        &_description {
-          order: 2;
-          padding-right: 45%;
-        }
-
-        &_options {
-          order: 3;
-          display: flex;
-          align-items: flex-end;
-          flex: 1;
-          .col-3 {
-            border: 1px solid white;
-            border-radius: 5px;
-            text-align: center;
-            cursor: pointer;
-          }
-        }
-    }
-
-  &_img, &_overlay {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0; 
-    left: 0;
-    z-index: -1;
-  }
-
-  &_overlay {
-    background: rgba(0,0,0,0.7);
-  }
-  
-  &_content {
-      color: white;
-  }
-
-  .container {
-      top: 5vh;
-  }
-
-  &_options {
-      .col-3 {
-        border: 1px solid white;
-        border-radius: 5px;
-        text-align: center;
-        cursor: pointer;
-      }
-      
-  }
-
-}  
-
-.activity {
-  position: relative;
-  display: flex;  
-
-  @include fullScreen() {
-    margin: 4rem 0;
-  }
-  
-
-  &__toggle {
-    outline: none;
-    border: none;     
-    position: absolute; 
-    top: -2%;
-    right: 2%;    
-    z-index: 10;    
-    cursor: pointer;
-    @include activityBackdrop;
-  }
-
-  &__image {
-    flex: 1;
-    width:100%;
-    
-  }
-
-  &__user {
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__details {  
-    position: relative;  
-    
-
-    @include smallScreen() {
-      flex-direction: row;
-      flex: 3;    
-      display: flex;
-      flex-direction: column;
-    }    
-    
-    &__title {
-        flex: 1;
-        order: 0;
-        align-self: flex-start;
-        position: relative;
-
-      @include fullScreen() {
-        position: absolute;
-        left: 3%;
-        top: -4%;
-        @include activityBackdrop;       
-        font-size: 3rem;
-      }
-                
-    }
-
-    &__user {        
-      @include fullScreen() {
-        position: absolute;
-        right: 3%;
-        bottom: -9%;        
-        @include activityBackdrop;  
-      }
-    }
-   
-  }
-
-  &__list {
-    flex: 1;
-    display: flex;    
-    flex-wrap: wrap;
-    align-items: center;
-    cursor: pointer;
-    position: relative;
-    padding: 1rem;    
-    background: rgba(255,255,255,0.5);
-    backdrop-filter: blur(3px);
-
-    &_blur {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background: #222;
-      opacity: 0.15;
-      filter: blur(10px);
-    }
-
-    &__item {
-      width: 50%;
-    }
-  }
-}
-
-.image {
-  &-details {
-    flex: 1;
-    align-items: flex-start;
-    display: flex;
-
-    &__user {
-      display: flex;
-      flex-wrap: wrap;
-      padding: 1rem 2rem;                  
-
-      &__headshot {
-        border-radius: 50%;
-      }
-
-      &__name {
-        align-self: center;
-        padding-left: 1rem;
-        page-break-after: always;
-      }
-
-      &__social {
-        width: 100%;
-        padding: 1rem 0rem;
-      }
-    }
-  }
-}
-
-
-//grid
-// grid
-
-$width: 96%;
-$gutter: 4%;
-$breakpoint-small: 33.75em; // 540px
-$breakpoint-med: 45em; // 720px
-$breakpoint-large: 60em; // 960px
-
-.container {
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto; 
-  position: relative;
-
-  &.is-full {
-      height: 100vh;
-  }
-
-  @media only screen and (min-width: $breakpoint-small) {
-    width: 80%;
-  }
-
-  @media only screen and (min-width: $breakpoint-large) {
-    width: 75%;
-    max-width: 60rem;
-  }
-}
-
-.row {
-  position: relative;
-  width: 100%;
-}
-
-.row [class^="col"] {
-  float: left;
-  margin: 0.5rem 2%;
-  min-height: 0.125rem;
-}
-
-.row::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.col-1,
-.col-2,
-.col-3,
-.col-4,
-.col-5,
-.col-6,
-.col-7,
-.col-8,
-.col-9,
-.col-10,
-.col-11,
-.col-12 {
-  width: $width;
-}
-
-.col-1-sm { width:($width / 12) - ($gutter * 11 / 12); }
-.col-2-sm { width: ($width / 6) - ($gutter * 10 / 12); }
-.col-3-sm { width: ($width / 4) - ($gutter * 9 / 12); }
-.col-4-sm { width: ($width / 3) - ($gutter * 8 / 12); }
-.col-5-sm { width: ($width / (12 / 5)) - ($gutter * 7 / 12); }
-.col-6-sm { width: ($width / 2) - ($gutter * 6 / 12); }
-.col-7-sm { width: ($width / (12 / 7)) - ($gutter * 5 / 12); }
-.col-8-sm { width: ($width / (12 / 8)) - ($gutter * 4 / 12); }
-.col-9-sm { width: ($width / (12 / 9)) - ($gutter * 3 / 12); }
-.col-10-sm { width: ($width / (12 / 10)) - ($gutter * 2 / 12); }
-.col-11-sm { width: ($width / (12 / 11)) - ($gutter * 1 / 12); }
-.col-12-sm { width: $width; }
-
-@media only screen and (min-width: $breakpoint-med) {
-  .col-1 { width:($width / 12) - ($gutter * 11 / 12); }
-  .col-2 { width: ($width / 6) - ($gutter * 10 / 12); }
-  .col-3 { width: ($width / 4) - ($gutter * 9 / 12); }
-  .col-4 { width: ($width / 3) - ($gutter * 8 / 12); }
-  .col-5 { width: ($width / (12 / 5)) - ($gutter * 7 / 12); }
-  .col-6 { width: ($width / 2) - ($gutter * 6 / 12); }
-  .col-7 { width: ($width / (12 / 7)) - ($gutter * 5 / 12); }
-  .col-8 { width: ($width / (12 / 8)) - ($gutter * 4 / 12); }
-  .col-9 { width: ($width / (12 / 9)) - ($gutter * 3 / 12); }
-  .col-10 { width: ($width / (12 / 10)) - ($gutter * 2 / 12); }
-  .col-11 { width: ($width / (12 / 11)) - ($gutter * 1 / 12); }
-  .col-12 { width: $width; }
-
-  .hidden-sm {
-    display: block;
-  }
-}
