--- a/css/_activity.scss
+++ b/css/_activity.scss
@@ -114,7 +114,11 @@
       &__user {
         display: flex;
         flex-wrap: wrap;
-        padding: 1rem 2rem;                  
+        padding: 1rem 2rem;    
+        
+        &__photoBy {
+          width: 100%;
+        }
   
         &__headshot {
           border-radius: 50%;
