--- a/css/_trail.scss
+++ b/css/_trail.scss
@@ -3,6 +3,26 @@
     flex-direction: column;  
     width: 33%;
     margin: 10px;
+
+    &__section {
+      min-height: 100vh;
+      position: relative;
+      height: 100vw;
+    }
+
+    &__container {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      height: 100vw;
+      min-height: 100vh;
+      min-width: 100vw;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+    }
   
     &__subtitle {
       opacity: 0.7;
@@ -62,6 +82,32 @@
         right: 1.25rem;
       }
     }
+
+    &__scroll {
+      position: absolute;
+      height: 100%;
+      width: 12vw;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 3rem;      
+      z-index: 10;
+      background:rgba(255,255,255, 0.2);
+      transition: 00.25s opacity ease-in-out;
+
+      &:hover {        
+        background:rgba(255,255,255, 0.5);
+      }
+
+      &_left {
+        left: 0;
+      }
+
+      &_right {
+        right: 0;
+      }
+    }
+
   }
   
   .page {
