--- a/css/_activity.scss
+++ b/css/_activity.scss
@@ -1,9 +1,12 @@
 .activity {
     position: relative;    
+    @include smallScreen() {
+      overflow: hidden;
+    }
   
     @include fullScreen() {
       margin: 4rem 0;
-    }
+    }   
     
   
     &__toggle {
@@ -19,8 +22,7 @@
   
     &__image {
       flex: 1;
-      width:100%;
-      
+      width:100%;      
     }
   
     &__user {
@@ -44,6 +46,7 @@
           order: 0;
           align-self: flex-start;
           position: relative;
+          padding: 1.5rem;
   
         @include fullScreen() {
           position: absolute;
