--- a/css/_overall.scss
+++ b/css/_overall.scss
@@ -41,8 +41,8 @@ header {
     position:fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    padding: 2vw;
+    right: 0;
+    padding: 0.5vw;
     z-index: 5;
 }
 
