--- a/css/_trail.scss
+++ b/css/_trail.scss
@@ -8,12 +8,28 @@
       min-height: 100vh;
       position: relative;
       height: 100vw;
+      margin: 2rem 0;
+
+      &::before {
+        content: "";
+        background: url(../src/assets/topo-pattern.png);
+        background-blend-mode: overlay;
+        background-size: cover;
+        position: absolute;
+        top:0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        opacity: 0.50;
+        filter: sepia(0.65);
+      }
     }
 
     &__container {
       display: flex;
       flex-direction: column;
       flex-wrap: wrap;
+      padding: 2rem 0;
       height: 100vw;
       min-height: 100vh;
       min-width: 100vw;
@@ -22,6 +38,7 @@
       bottom: 0;
       right: 0;
       left: 0;
+      transition: 0.15s all ease-in-out;
     }
   
     &__subtitle {
@@ -29,14 +46,14 @@
     }
   
     &__image {
-      max-width: 100%;
-      // clip-path: polygon(0 0, 100% 0, 100% 0, 100% 100%, 100% 100%, 20% 100%, 0 80%, 0 0);
-      border-radius: 2rem;
+      max-width: 100%;            
     }
   
     &__body {
       position: relative;
       overflow: hidden;
+      border-radius: 2rem;
+      box-shadow: 0 0 8px 2px rgba(0,0,0,0.3);
     }
   
     &__info {
@@ -49,8 +66,7 @@
       padding: 1rem; 
       cursor: pointer;
       background: rgba(0,0,0,0.7);
-      transition: 0.2s ease-in-out top, cubic-bezier(0.075, 0.82, 0.165, 1) border-radius;
-      border-radius: 0 0 2rem 2rem;
+      transition: 0.2s ease-in-out top, cubic-bezier(0.075, 0.82, 0.165, 1) border-radius;     
   
   
       .trail__details {
