--- a/css/_overall.scss
+++ b/css/_overall.scss
@@ -23,12 +23,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 5rem;
+    font-size: 7vw;
     margin: 1rem 0;
 }
 
 h2 {
-    font-size: 2.25rem;
+    font-size: 3vw;
     margin: 0 0 1rem;
 }
 
