--- a/css/_hero.scss
+++ b/css/_hero.scss
@@ -47,6 +47,11 @@
             cursor: pointer;
             padding: 1rem;
           }
+
+          @include smallScreen() {
+            flex-direction: column;
+            justify-content: flex-end;
+          }
         }
     }
 
