--- a/css/_activity.scss
+++ b/css/_activity.scss
@@ -156,7 +156,7 @@
 
   &__bar {
     height: 2px;
-    width: 2vw;
+    width: 20px;
     background: white;
     transition: 0.25s transform ease-in;
 
