--- a/css/_overall.scss
+++ b/css/_overall.scss
@@ -1,10 +1,16 @@
 //.block__element--modifier { css stuff }
+$white: #fff;
+$softBlue: rgba(10, 111, 171, 0.4);
+
+html, body {
+  overflow-x: hidden;
+}
+
 body {
     margin: 0;
     font-family: 'Lato';
     font-size: 16px;
-    line-height: 1.5;
-    overflow-x: hidden;
+    line-height: 1.5;    
 }
 
 a {
@@ -28,7 +34,7 @@ h1 {
 }
 
 h2 {
-    font-size: 3vw;
+    font-size: 4vw;
     margin: 0 0 1rem;
 }
 
