--- a/css/_trail.scss
+++ b/css/_trail.scss
@@ -1,29 +1,33 @@
+.hiking {
+  &__section {
+    min-height: 100vh;
+    position: relative;
+    height: 100vw;
+    margin: 2rem 0;
+
+    &::before {
+      content: "";
+      background: url(../src/assets/topo-pattern.png);
+      background-blend-mode: overlay;
+      background-size: cover;
+      position: absolute;
+      top:0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      opacity: 0.50;
+      filter: sepia(0.65);
+    }
+  }
+}
+
 .trail {
     display: flex;  
     flex-direction: column;  
     width: 33%;
     margin: 10px;
 
-    &__section {
-      min-height: 100vh;
-      position: relative;
-      height: 100vw;
-      margin: 2rem 0;
-
-      &::before {
-        content: "";
-        background: url(../src/assets/topo-pattern.png);
-        background-blend-mode: overlay;
-        background-size: cover;
-        position: absolute;
-        top:0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        opacity: 0.50;
-        filter: sepia(0.65);
-      }
-    }
+    
 
     &__container {
       display: flex;
@@ -110,6 +114,11 @@
       z-index: 10;
       background:rgba(255,255,255, 0.2);
       transition: 00.25s opacity ease-in-out;
+      cursor: pointer;
+
+      span {
+        pointer-events: none;
+      }
 
       &:hover {        
         background:rgba(255,255,255, 0.5);
